--- a/style.css
+++ b/style.css
@@ -10,20 +10,12 @@ body{
     margin:0;
     font-family: "Raleway", serif;
 }
-
 /*============HEADER==============*/
-
-.current_page_item{
-    background-color: #B48489;
-    height: 80px;
-    align-items: center;
-}
-
 header{
-    background-color: #d39aa1;
+    background-color: #fff;
     display: flex;
     height:80px;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     box-shadow: 0 3px 10px #919191;
     transition: 1s;
@@ -40,7 +32,7 @@ header img{
 .header-menu nav div ul{
     display: flex;
     list-style-type: none;
-     position: relative;
+    position: relative;
     align-items: center;
 }
 
@@ -54,7 +46,6 @@ header img{
     padding-left: 10px;
     padding-right: 10px;
 }
-
 
 .header-menu nav div ul li a{
     font-size: 1.2em;
@@ -76,6 +67,7 @@ header img{
     margin-left: 20px;
     padding-left: 0px;
     transition: 1s;
+    z-index: 10;
 }
 
 .header-menu nav div ul li ul li{
@@ -91,7 +83,8 @@ header img{
     padding: 0;
 }
 
-header nav div ul li:hover ul{
+
+.header-menu nav div ul li:hover ul{
     display:block;
 }
 
@@ -100,7 +93,16 @@ header nav div ul li:hover ul{
     color: #fff;
 }
 
+.header-menu nav div ul li ul li:hover{
+    background-color: #B48489;
+    color: #fff;
+}
+
 .header-menu nav div ul li a:hover{
+    color: #fff;
+}
+
+.header-menu nav div ul li ul li a:hover{
     color: #fff;
 }
 
@@ -110,8 +112,65 @@ header nav div ul li:hover ul{
 
 .header-menu-sociaux{
     margin-left: 50px;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: #000;
+}
+/*========HEADER RESPONSIVE=========*/
+
+@media (min-width: 200px){
+
+    .header img{
+        display: none;
+    }
+    .header a{
+        display: none;
+    }
+    .toggle_btn{
+        display: flex;
+    }
+    header.nav{
+        flex-flow: column;
+    }
+    header.nav .header-menu{
+        display: flex;
+    }
+    header.nav .header-menu a{
+        display: flex;
+    }
 }
 
+@media (min-width: 576px){
+
+}
+
+@media (min-width: 768px){
+
+}
+
+@media (min-width: 992px){
+    .header-menu{
+        display: flex;
+    }
+    .header a{
+        display: flex;
+    }
+    .header img{
+        display: flex;
+    }
+
+    .toggle_btn{
+        display: none;
+    }
+}
+
+@media (min-width: 1200px){
+    .toggle_btn{
+        display: none;
+    }
+}
 
 /*=============YOGA===============*/
 .yoga-card1{
@@ -226,266 +285,6 @@ header nav div ul li:hover ul{
     margin-top: 30px;
 }
 
-/*==========FRONT-PAGE============*/
-
-.front-title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.8em;
-    text-align: center;
-}
-
-.main-picture{
-    position:relative;
-    max-width: 100%;
-}
-
-.front-content{
-    position: absolute;
-    color: #fff;
-}
-
-.front-content h1{
-    margin-top: 0;
-}
-
-.front-presentation{
-    display: flex;
-    padding: 30px;
-    font-size: 1.8em;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.front-presentation p{
-    display: flex;
-    font-size: 0.6em;
-    width: 500px;
-}
-
-.sav{
-    background-color: #F8F8F8;
-    display: flex;
-    padding: 20px;
-    text-align: center;
-    justify-content: space-around;
-}
-
-.sav-content{
-    margin:15px;
-}
-
-.sav-content i{
-    font-size: 2em;
-}
-
-.front-property{
-    background-color: #f2f2f2;
-    padding-bottom: 50px;
-}
-
-.front-property h2 {
-    margin-top: 0;
-    padding-top: 30px;
-    text-align: center;
-}
-
-.front-property-container{
-    margin-top: 70px;
-}
-
-.front-property p{
-    text-align: center;
-}
-
-.front-hr{
-    width: 100px;
-    height: 2px;
-    border-radius: 5px;
-    background-color: red;
-    border: 1px solid red;
-}
-
-.link-toutes{
-    text-align: center;
-}
-
-.link-toutes a{
-    list-style-type: none;
-    text-decoration: none;
-    background-color: red;
-    padding: 15px 25px;
-    border-radius: 5px;
-    color: #fff;
-    font-weight: bold;
-    margin-top: 20px;
-}
-
-.front-agent{
-    display:flex;
-    margin-left: 120px;
-    margin-right: 120px;
-}
-
-.front-agent-rens{
-    margin-top: 140px;
-    margin-left: 100px;
-    margin-right: 100px;
-}
-
-.front-agent-rens hr{
-    width: 100px;
-    height: 2px;
-    border-radius: 5px;
-    background-color: red;
-    border: 1px solid red;
-    margin-left: 0
-}
-
-.partenaire{
-    margin-top: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-/*====RESPONSIVE FRONT====*/
-
-@media (min-width: 200px){
-    .front-content h1{
-        margin-top: 0;
-        font-size: 1em;
-    }
-    .front-presentation{
-        display: flex;
-        flex-flow: column;
-    }
-    .sav{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .sav-content{
-        width: 280px;
-    }
-    .front-agent{
-        display: flex;
-        flex-flow: column;
-    }
-    .front-agent-rens{
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@media (min-width: 576px){
-    .front-content h1{
-        margin-top: 0;
-        font-size: 1em;
-    }
-    .front-presentation{
-        display: flex;
-        flex-flow: column;
-    }
-    .sav{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .sav-content{
-        width: 280px;
-    }
-    .front-agent{
-        display: flex;
-        flex-flow: column;
-    }
-    .front-agent-rens{
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@media (min-width: 768px){
-    .front-content h1{
-        margin-top: 0;
-        font-size: 1.5em;
-    }
-    .front-presentation{
-        display: flex;
-        flex-flow: column;
-    }
-    .sav{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .sav-content{
-        width: 280px;
-    }
-    .front-agent{
-        display: flex;
-        flex-flow: column;
-    }
-    .front-agent-rens{
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@media (min-width: 992px){
-    .front-content h1{
-        margin-top: 0;
-        font-size: 2em;
-    }
-
-    .front-presentation{
-        display: flex;
-        flex-flow: row;
-    }
-    .sav{
-        display: flex;
-    }
-    .sav-content{
-        width: 280px;
-    }
-    .front-agent{
-        display: flex;
-        flex-flow: row;
-    }
-    .front-agent-rens{
-        margin-top: 140px;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-}
-
-@media (min-width: 1200px){
-    .front-content h1{
-        margin-top: 0;
-        font-size: 2em;
-    }
-
-    .front-presentation{
-        display: flex;
-        flex-flow: row;
-    }
-    .sav{
-        display: flex;
-    }
-    .sav-content{
-        width: 300px;
-    }
-    .front-agent{
-        display: flex;
-        flex-flow: row;
-    }
-    .front-agent-rens{
-        margin-top: 140px;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-}
-
 /*=============HOME===============*/
 
 .home-bloc-top{
@@ -580,378 +379,6 @@ header nav div ul li:hover ul{
         flex-flow: column;
     }
 }
-
-/*=======SINGLE-REALISATION=======*/
-
-.single-real{
-    margin-right: 80px;
-    margin-top: 80px;
-    margin-left: 80px;
-}
-
-.single-rens{
-    display: flex;
-}
-
-.single-image{
-    width: 700px;
-    height: 100%;
-}
-
-.single-right{
-    display: block;
-    width: calc(100% - 600px);
-    margin-left: 40px;
-}
-
-.single-right-rens{
-    display: block;
-}
-
-.single-price{
-    color: red;
-    font-size: 2em;
-    margin-top: 0;
-    padding-bottom: 10px;
-}
-
-.single-price::before{
-    color: grey;
-}
-/*--------------------------------*/
-
-.single-demo{
-    margin-left: 80px;
-    margin-right: 80px;
-}
-
-.single-news{
-    display: flex;
-}
-
-.single-singlecard{
-    width: 200px;
-    margin-right: 50px;
-}
-
-.single-img{
-    width: 200px;
-    border-radius: 10px;
-}
-
-.single-singlecard a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-
-/*===========PROPERTY=============*/
-
-.property{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.property-title{
-    margin-top: 80px;
-    text-align: center;
-}
-
-.property-singlecard{
-    background-color: white;
-    text-align: center;
-    border: 1px solid grey;
-    margin-bottom: 40px;
-    color: #000;
-}
-
-.property-singlecard:hover{
-    transform: scale(1.02,1.02);
-}
-
-.property-container{
-    margin-top: 70px;
-}
-
-.property-link{
-    text-decoration: none;
-    list-style-type: none;
-}
-
-.property-picture{
-}
-
-.property-house{
-    margin-top: 7px;
-}
-
-.property-house h2{
-    list-style-type: none;
-    text-decoration: none;
-    color: #000;
-}
-
-.property-info{
-    display: flex;
-    justify-content: center;
-    border-top: 1px solid #000;
-}
-
-.property-info p{
-    display: flex;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.property-price{
-    font-size: 1.5em;
-    color: red;
-    margin-top: 7px;
-    margin-bottom: 7px;
-    font-family: "Arial", serif;
-}
-
-.property-city{
-    font-family: "Playfair display", "serif";
-}
-
-.gabarit-ville{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.gabarit-ville a{
-    list-style-type: none;
-    margin: 10px;
-    color: #000;
-    text-decoration: none;
-}
-
-.gabarit-ville a:hover{
-    font-weight: bold;
-    border-bottom: 2px solid red;
-}
-
-.gabarit-ville li{
-    list-style-type: none;
-    margin: 10px;
-}
-
-.gabarit-ville li a{
-    color: #000;
-    text-decoration: none;
-}
-
-.gabarit-ville li a:hover{
-    font-weight: bold;
-    border-bottom: 2px solid red;
-}
-
-/*======RESPONSIVE PROPERTY======*/
-
-@media (min-width: 200px){
-
-}
-
-@media (min-width: 576px){
-
-}
-
-@media (min-width: 768px){
-
-}
-
-@media (min-width: 992px){
-
-}
-
-@media (min-width: 1200px){
-
-}
-
-
-/*============SINGLE==============*/
-
-.singlehome-bloc-top{
-    text-align: center;
-}
-
-.singlehome-container{
-    display: flex;
-    text-align: center;
-    margin-top: 100px;
-}
-
-.singlehome-news{
-    display: block;
-    margin-left: 80px;
-    text-align: left;
-    width: 70%;
-    border-right: 2px solid #BEBEBE;
-    padding-right: 100px;
-}
-
-.singlehome-singlecard{
-    width: 70%;
-    padding-left: 0;
-}
-
-.singlehome-singlecard h2{
-    text-align: left;
-}
-
-.alignnone{
-    height: 100%;
-    width: 700px;
-}
-
-.singlehome-auteur{
-    display:flex;
-}
-
-.comment-body{
-    background-color: #f2f2f2;
-    width: 500px;
-    border-radius: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.children li div{
-    background-color: #BEBEBE;
-    border-radius: 10px;
-}
-
-.comment-meta a{
-    color: #000;
-    text-decoration: none;
-}
-.comment-meta p{
-    font-weight: bold;
-}
-
-.comment-reply-link{
-    color: #000;
-    text-decoration: none;
-}
-
-.comment-form-url{
-    display:none;
-}
-
-.logged-in-as a{
-    color: #000;
-    text-decoration: none;
-}
-
-.form-submit input{
-    border: none;
-    background-color: red;
-    padding: 15px 25px;
-    border-radius: 5px;
-    color: #fff;
-    font-weight: bold;
-    margin-top: 20px;
-}
-
-.singlehome-sidebar{
-    color: #000;
-    margin-top: 20px;
-    margin-left: 100px;
-    text-align: left;
-    width: 60%;
-}
-
-.singlehome-sidebar div ul{
-    list-style-type: none;
-    padding: 0;
-}
-
-.singlehome-sidebar div ul li{
-    list-style-type: none;
-    margin-top: 10px;
-}
-
-.singlehome-sidebar div ul li a{
-    color: #000;
-    text-decoration: none;
-}
-
-.sidebar div{
-    margin-bottom: 70px;
-}
-
-/*=====RESPONSIVE HOME=====*/
-
-@media (min-width: 200px){
-    .singlehome-sidebar div ul li blockquote{
-        display: none;
-    }
-    .singlehome-sidebar{
-        display: none;
-    }
-    .singlehome-news p img{
-        width: 300px;
-    }
-}
-
-@media (min-width: 576px){
-    .singlehome-sidebar div ul li blockquote{
-        display: none;
-    }
-    .singlehome-sidebar{
-        display: none;
-    }
-    .singlehome-news p img{
-        width: 400px;
-    }
-}
-
-@media (min-width: 768px){
-    .singlehome-sidebar div ul li blockquote{
-        display: none;
-    }
-    .singlehome-sidebar{
-        display: flex;
-        flex-flow: column;
-        margin-left: 10px;
-    }
-    .singlehome-news p img{
-        width: 500px;
-    }
-}
-
-@media (min-width: 992px){
-    .singlehome-sidebar div ul li blockquote{
-        display: none;
-    }
-    .singlehome-sidebar{
-        display: flex;
-        flex-flow: column;
-        margin-left: 50px;
-    }
-    .singlehome-news p img{
-        width: 600px;
-    }
-}
-
-@media (min-width: 1200px){
-    .singlehome-sidebar div ul li blockquote{
-        display: flex;
-        flex-flow: column;
-    }
-    .singlehome-sidebar{
-        display: flex;
-        flex-flow: column;
-        margin-left: 100px;
-    }
-    .singlehome-news p img{
-        width: 700px;
-    }
-}
-
 
 /*===========CONTACT==============*/
 
@@ -1101,7 +528,6 @@ header nav div ul li:hover ul{
     }
 }
 
-
 /*===========A PROPOS=============*/
 
 .apropos{
@@ -1124,20 +550,6 @@ header nav div ul li:hover ul{
     margin-left: 60px;
 }
 
-.equipe{
-    background-color: #fff;
-    display: flex;
-    padding-top: 50px;
-    justify-content: space-around;
-    margin-left: 80px;
-    margin-right: 80px;
-    text-align: center;
-}
-
-.equipe-content{
-    border: 1px solid #f2f2f2;
-    margin-bottom: 20px;
-}
 
 /*=======A PROPOS RESPONSIVE======*/
 
@@ -1238,70 +650,47 @@ header nav div ul li:hover ul{
 
 .footer{
     display: flex;
-    height: 200px;
-    color: #fff;
-    background-color: #303030;
+    height: 100px;
+    color: #000;
+    background-color: #f2f2f2;
     justify-content: space-around;
     padding-top: 20px;
     margin-top: 40px;
 }
 
 .footer-left{
+    display: flex;
     text-align: center;
 }
 
-.footer-menu-sociaux nav div ul{
-    padding: 0;
+.footer-logo img{
+    height: 80px;
+    width: 80px;
+}
+
+.footer-contact{
+    display: flex;
+    flex-flow: column;
     text-align: center;
 }
 
-.footer-menu-sociaux nav div ul li{
+.footer-contact h3{
+    margin-top: 0;
+}
+
+.footer-contact i{
+    padding-bottom: 10px;
+}
+
+.footer-menu-sociaux i{
     border: 1px solid #000;
-    background-color: #fff;
-    background-size: 100px;
-    border-radius: 50px;
-    color: #3C3C3C;
-    height: 50px;
-    line-height: 50px;
+    border-radius: 50%;
+    font-size: 2.3em;
+    padding: 10px;
+    padding-top: 13px;
+    width: 40px;
     text-align: center;
-    width: 50px;
-
-}
-
-.footer-menu-sociaux nav div ul a{
-    display: none;
-}
-
-.footer-menu{
-    text-align: left;
-}
-
-.footer-menu nav div ul{
-    padding:0;
-}
-
-.footer-menu nav div ul li{
-    list-style-type: none;
-}
-
-.footer-menu nav div ul li a{
-    color: #fff;
-    text-decoration: none;
-}
-
-.footer-right p{
-    margin: 1px;
-}
-
-.footer-right p:nth-child(2){
-    font-size: 0.9em;
-    margin-bottom:10px;
-}
-
-.footer-right p:nth-child(6){
-    color: #E2574C;
-    font-weight: bold;
-    margin-top: 10px;
+    height: 40px;
 }
 
 /*===========PARCOURS===========*/
@@ -1365,7 +754,6 @@ header nav div ul li:hover ul{
     width: 45em;
 }
 
-
 /*===========REGLEMENT===========*/
 
 .reglement{
@@ -1386,6 +774,44 @@ header nav div ul li:hover ul{
 
 .reglement-text h3{
     margin-left: 2rem;
+}
+
+/*===========TRAIL============*/
+.trail{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.trailcard{
+    align-items: center;
+    background-color: #B48489;
+    border-radius: 10px;
+    display: flex;
+    flex-flow: column;
+    height: 200px;
+    justify-content: center;
+    width: 230px;
+}
+
+.trailcard-text{
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.trailcard img{
+    width: 200px;
+}
+
+.trail-menu{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+.trail-menu li{
+    padding-right: 30px;
 }
 
 
@@ -1409,6 +835,7 @@ header nav div ul li:hover ul{
 }
 
 .toggle_btn span{
+    display: flex;
     height: 7px;
     background-color: #2c3e50;
     width: 100%;
@@ -1445,3 +872,4 @@ header nav div ul li:hover ul{
     height: 300px;
     transition: 1s;
 }
+
